Implement missing pieces from first iteration
 * Video section on the frontpage
 * Make footer full width and add social media links
 * Add privacy-policy link and page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: frontpage
 title: SensorFu Beacon - Always know if your network leaks!
 description: SensorFu Ltd manufactures and sells advanced automatic security policy checks. SensorFu’s first product, SensorFu Beacon, assures the isolation of computer networks.
 ---
-
 <div class="hero front-hero">
     <div class="container-xl">
         <div class="hero-content">
@@ -102,6 +101,24 @@ description: SensorFu Ltd manufactures and sells advanced automatic security pol
     </div>
 </div>
 
-<div class="video-section">
+<div class="bg-gray">
+    <div class="container-xl px-0">
+        <div class="video-section">
+            <div class="text-container">
+                <h2>Network Monitoring Made&nbsp;Easy</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
 
+                <a href="https://www.youtube.com/@sensorfu" rel="noreferer noopener" target="_blank">
+                    <img src="assets/img/social-icons/youtube.svg" alt="YouTube">
+                    <span>Check&nbsp;our&nbsp;videos on&nbsp;Youtube &rarr;</span>
+                </a>
+            </div>
+            <div class="bg-container">
+                <img src="/assets/img/video-banner.jpg" alt="Video Banner">
+                <div class="gradient-overlay"></div>
+            </div>
+        </div>
+    </div>
 </div>
