Preload top-hero images

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: frontpage
 title: SensorFu Beacon - Always know if your network leaks!
 description: SensorFu Ltd manufactures and sells advanced automatic security policy checks. SensorFu’s first product, SensorFu Beacon, assures the isolation of computer networks.
+preload_image: /assets/img/frontpage_banner.jpg
 ---
 <div class="hero front-hero">
     <div class="container-xl">
