Add some responsive styles for small / mobile screens

--- a/beacon.html
+++ b/beacon.html
@@ -16,7 +16,7 @@ preload_image: /assets/img/beacon_banner.jpg
 
 {% include reference-carousel.html %}
 
-<div class="container-sm my-4 p-4 text-center">
+<div class="container-sm my-sm-4 p-4 text-center">
     <h1 class="my-4">SensorFu Beacon is designed for customers who depend on absolute network segregation</h1>
 
     <p>
