--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ preload_image: /assets/img/frontpage_banner.jpg
 {% include reference-carousel.html %}
 
 <div class="container-xl my-4">
-    <h1 class="text-center p-4">SensorFu provides cybersecurity for Operational Technology (OT) across all
+    <h1 class="text-center p-md-4">SensorFu provides cybersecurity for Operational Technology (OT) across all
         industries</h1>
 
     <div class="industry-cards">
@@ -68,7 +68,7 @@ preload_image: /assets/img/frontpage_banner.jpg
     </div>
 </div>
 
-<div class="bg-gray p-4">
+<div class="bg-gray py-4 px-2 px-md-4">
     <div class="container-xl">
         <h1>Latest articles</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
