--- a/beacon.html
+++ b/beacon.html
@@ -17,15 +17,13 @@ preload_image: /assets/img/beacon_banner.jpg
 {% include reference-carousel.html %}
 
 <div class="container-sm my-sm-4 p-4 text-center">
-    <h1 class="my-4">SensorFu Beacon is designed for customers who depend on absolute network segregation</h1>
+    <h1 class="my-4">SensorFu Beacon is designed for customers who depend on absolute network segmentation</h1>
 
     <p>
-        Beacon calls home! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget odio lacus. Curabitur in
-        dui nec purus suscipit eleifend. Quisque sit amet urna sed neque ullamcorper consectetur.  Lorem ipsum dolor sit
-        amet, consectetur adipiscing elit. Nunc eget odio lacus. Curabitur in dui nec purus suscipit eleifend. Quisque
-        sit amet urna sed neque ullamcorper consectetur
-    </p>
+        We want our clients to be certain that their security policies and protection measures are, and stay, working as they should. Often, maintaining network security lacks validation, causing anxiety over possible hiccups and misconfigurations, which can lead to revenue losses. 
+        You rely on it. You may call it isolation, segregation, segmentation, partition, or sandboxing. But do you know it works? Privacy, critical infrastructure protection, payment safety, or your sanity may require it. 
 
+    </p>
     <p>
         Beacons can be deployed in bare metal, virtual machines, containers, and even on small gadgets. And it is
         compatible with your deployment solution.
@@ -41,10 +39,11 @@ preload_image: /assets/img/beacon_banner.jpg
         <div class="text-container">
             <h2><span class="black">Beacon</span> Application</h2>
             <p>
-                Install the Beacon Application on workstations, laptops or cloud deployments you need to keep safe. The
-                app is easy to deploy, compatible with management tools like Microsoft System Center, GPO, Puppet, and
-                Ansible. By adding Beacon to your management automation, you get comprehensive coverage of your
-                isolation effectiveness.
+                The Beacon Application is easy to deploy in existing environments. You 
+                can use management tools such as Microsoft System Center, Group Policy 
+                Objects (GPO), Puppet, Ansible, and others. Simply integrate the Beacon 
+                Application into your automation workflows to gain full visibility into 
+                the effectiveness of your network isolation.           
             </p>
         </div>
         <div class="icon-container">
@@ -56,10 +55,9 @@ preload_image: /assets/img/beacon_banner.jpg
         <div class="text-container">
             <h2><span class="black">Beacon</span> Virtual</h2>
             <p>
-                Launch the virtual Beacons inside data centers and see if they can call their Home. Download Beacon
-                Virtual Machine in standard OVA -format from Beacon Home and put your VM to right network and you are
-                ready.
-            </p>
+                Launch virtual Beacons inside your data centers to see if they can reach 
+                their Home. Download the Beacon Virtual Machine in standard OVA format from 
+                Beacon Home, place the VM in the appropriate network, and you’re ready to go            </p>
         </div>
         <div class="icon-container">
             <img src="/assets/img/beacon-icons/virtual.svg" alt="Beacon Virtual Icon">
@@ -70,9 +68,12 @@ preload_image: /assets/img/beacon_banner.jpg
         <div class="text-container">
             <h2><span class="black">Beacon</span> Device</h2>
             <p>
-                Use the Beacon Devices to test network isolation on premises. Leave them behind, move them around, have
-                them all around. Works with Raspberry Pi*. Download image from Beacon Home, copy it to SD card and you
-                are ready to deploy the Beacon Device to your network.
+                Use Beacon Devices to test network isolation in on-premises environments. 
+                Leave them behind, move them around—deploy them anywhere. Compatible with 
+                Raspberry Pi*. Simply download the image from Beacon Home, copy it to an SD 
+                card, and you’re ready to deploy the Beacon Device to your network.   
+                
+                <i>*Raspberry Pi is a trademark of the Raspberry Pi Foundation</i>
             </p>
         </div>
         <div class="icon-container">
