--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@ preload_image: /assets/img/frontpage_banner.jpg
         <div class="hero-content">
             <h1>Fundamental cyber security for advanced protection</h1>
             <p>
-                Cybersecurity dolor sit amet, consectetur adipiscing elit. Nunc eget odio lacus. Curabitur in dui nec
-                purus
-                suscipit eleifend. Quisque sit amet urna sed neque ullamcorper consectetur.
+                Security requirements pile up, while systems and security solutions 
+                get more complex every day. But before implementing more advanced and 
+                complex solutions, be sure you can verify the basic cybersecurity fundamentals 
+                first. Let’s get back to basics. 
             </p>
             <div>
-                <a class="btn btn-gradient" href="#">Learn more &rarr;</a>
+                <a class="btn btn-gradient" href="about.html#">About us &rarr;</a>
             </div>
         </div>
     </div>
@@ -59,7 +60,7 @@ preload_image: /assets/img/frontpage_banner.jpg
         <div class="hero-content">
             <img src="/assets/img/beacon-by-sensorfu.svg" alt="Beacon By SensorFu">
             <h2>
-                Designed for customers who depend on absolute network segregation
+                Designed for customers who depend on absolute network segmentation
             </h2>
             <div>
                 <a class="btn btn-gradient" href="/beacon.html">Learn more &rarr;</a>
@@ -71,7 +72,7 @@ preload_image: /assets/img/frontpage_banner.jpg
 <div class="bg-gray py-4 px-2 px-md-4">
     <div class="container-xl">
         <h1>Latest articles</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Don’t miss out on SensorFu’s happenings and blog posts! </p>
 
         <div class="posts-container pt-4">
             {% for post in site.posts limit:3 %}
