--- a/about.html
+++ b/about.html
@@ -9,16 +9,19 @@ preload_image: /assets/img/frontpage_banner.jpg
         <div class="hero-content">
             <h1>Fundamental cyber security for advanced protection</h1>
             <p>
-                In today’s digital world, our business-critical systems need to be 
-                more and more secure, with advanced cybersecurity structures and policies.  
-                Our background in network security researchers and network security auditors, 
-                we have found often times the simplest of vulnerabilities are easily overlooked.   
-                Our mission is to ensure that even the smallest, often overlooked flaws in 
-                security measures are addressed.
-
-                By continuously verifying that basic cybersecurity requirements are in place, 
-                companies are able to safeguard business-critical infrastructures from 
-                malicious actors. 
+                At SensorFu, we believe cybersecurity starts with the fundamentals. 
+                In a world of complex threats and reactive tools, our mission is to make the basics visible, 
+                verifiable, and trusted. We founded SensorFu to ensure network isolation isn't just assumed,
+                but continuously assured. 
+                
+                Our vision stemmed from recurring gaps in network segmentation and the risks of unnoticed misconfigurations.
+                Rather than adding complexity, we decided to simplify and solve the root problem securely and swiftly.
+                
+                SensorFu isn't just a product; it's an underlying principle, a commitment to securing infrastructure through
+                'security by design', implemented from the ground up with core cybersecurity principles. We continuously innovate, 
+                ensuring our solutions adapt to evolving threats. This means we provide proactive and continuous validation of isolated 
+                networks, operating silently to offer a safer, permanent solution that preserves the integrity and assurance of our customers'
+                cybersecurity policies without unnecessary complexity.
             </p>
         </div>
     </div>
