--- a/about.html
+++ b/about.html
@@ -7,21 +7,35 @@ preload_image: /assets/img/frontpage_banner.jpg
 <div class="hero about-hero">
     <div class="container-xl">
         <div class="hero-content">
-            <h1>Fundamental cyber security for advanced protection</h1>
+            <h1>Going back to the basics of cyber security</h1>
             <p>
-                In today’s digital world, our business-critical systems need to be 
-                more and more secure, with advanced cybersecurity structures and policies.  
-                Our background in network security researchers and network security auditors, 
-                we have found often times the simplest of vulnerabilities are easily overlooked.   
-                Our mission is to ensure that even the smallest, often overlooked flaws in 
-                security measures are addressed.
+                We enable organizations to proactively detect even 
+                the most intricate misconfigurations before they compromise 
+                operations. Our technologies let our customers verify that 
+                their foundational security controls work exactly as designed, 
+                24/7.
 
-                By continuously verifying that basic cybersecurity requirements are in place, 
-                companies are able to safeguard business-critical infrastructures from 
-                malicious actors. 
             </p>
         </div>
     </div>
+</div>
+<div class="container-sm my-sm-4 p-4 text-center">
+    <h1 class="my-4">Philosophy</h1>
+
+    <p>
+        SensorFu’s philosophy is rooted in the idea of going back to the basics of cyber security. 
+        Building and maintaining secure business-critical networks can feel overwhelming in an 
+        increasingly complex world. At SensorFu, we understand that challenge. We're here to bring 
+        you simplicity, proactive visibility, and confidence in your network defenses.
+
+    </p>
+    <p>
+        Our product SensorFu Beacon is a solution for proactive and continuous validation of 
+        network isolation and segmentation. It is used in business-critical environments, such as 
+        industrial OT and ICS networks, SCADA systems and other environments which demand reliability of 
+        network segmentation without risking the availability of operations.
+    </p>
+    <a href="/beacon.html" class="btn btn-primary">Read more</a>
 </div>
 
 <div class="container-xl text-center py-4 px-2 px-md-4 ">
@@ -30,27 +44,26 @@ preload_image: /assets/img/frontpage_banner.jpg
             <hr class="section-heading-spacer"/>
             <div class="clearfix"></div>
             <h2>Founded by</h2>
-            <p class="lead">
-
+            <ul class="list-unstyled lead">
+              <li>
                 Mikko Kenttälä, CEO
                 &nbsp;&nbsp;
-                <a href="https://twitter.com/Turmio_/"><i class="fab fa-twitter"></i></a>
-                <a href="https://linkedin.com/in/mikkokenttala/"><i class="fab fa-linkedin"></i></a>
-                <br>
-
+                <a href="https://twitter.com/Turmio_/" aria-label="Mikko Kenttälä on X/Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://linkedin.com/in/mikkokenttala/" aria-label="Mikko Kenttälä on LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+              </li>
+              <li class="mt-2">
                 Ossi Herrala, R&D lead
                 &nbsp;&nbsp;
-                <a href="https://mastodon.social/@oherrala" rel="me"><i class="fab fa-mastodon"></i></a>
-                <a href="https://github.com/oherrala/"><i class="fab fa-github"></i></a>
-                <!-- <a href="https://twitter.com/oherrala"><i class="fab fa-twitter"></i></a> -->
-                <a href="https://linkedin.com/in/oherrala/"><i class="fab fa-linkedin"></i></a>
-                <br>
-
+                <a href="https://mastodon.social/@oherrala" rel="me" aria-label="Ossi Herrala on Mastodon"><i class="fab fa-mastodon" aria-hidden="true"></i></a>
+                <a href="https://github.com/oherrala/" aria-label="Ossi Herrala on GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
+                <a href="https://linkedin.com/in/oherrala/" aria-label="Ossi Herrala on LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+              </li>
+              <li class="mt-2">
                 Sebastian Turpeinen, Productization lead
                 &nbsp;&nbsp;
-                <a href="https://www.linkedin.com/in/sebastianturpeinen/"><i class="fab fa-linkedin"></i></a>
-
-            </p>
+                <a href="https://www.linkedin.com/in/sebastianturpeinen/" aria-label="Sebastian Turpeinen on LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+              </li>
+            </ul>
             <blockquote class="blockquote bg-gray py-4 px-md-4">
                 <p><i>
                     "We started SensorFu in order to go back to basics with
@@ -60,18 +73,18 @@ preload_image: /assets/img/frontpage_banner.jpg
                     their security policies are and stay sealed."
                 </i>
                 </p>
+                <footer class="blockquote-footer">SensorFu founders</footer>
             </blockquote>
         </div>
         <div class="col-lg-6 mr-auto order-lg-2">
             <hr class="section-heading-spacer"/>
             <div class="clearfix"></div>
             <h2>Funded by </h2>
-            <p>
-                <a href="https://nordicoption.fi/">Nordic Option Oy</a><br>
-                <a href="https://www.scanabc.com/">Ääkköset Oy</a><br>
-                <a href="https://www.businessfinland.fi/en/">Business Finland</a><br>
-                <br></br>
-            </p>
+            <ul class="list-unstyled">
+              <li><a href="https://nordicoption.fi/">Nordic Option Oy</a></li>
+              <li><a href="https://www.scanabc.com/">Ääkköset Oy</a></li>
+              <li><a href="https://www.businessfinland.fi/en/">Business Finland</a></li>
+            </ul>
 
             <blockquote class="blockquote bg-gray">
                 <p><i>
@@ -81,8 +94,28 @@ preload_image: /assets/img/frontpage_banner.jpg
                     Ääkköset
                 </i>
                 </p>
+                <footer class="blockquote-footer">Kasper Kyllönen, partner at Ääkköset</footer>
             </blockquote>
         </div>
     </div>
 </div>
-
+<!-- New Contact Section -->
+<section class="container-xl text-center py-5" aria-labelledby="contact-heading">
+  <hr class="section-heading-spacer">
+  <div class="clearfix"></div>
+  <h2 id="contact-heading">SensorFu Oy</h2>
+  <address class="contact-address">
+    <p><strong>Oulu Headquarters</strong><br>
+       Teknologiantie 11<br>
+       90590 Oulu<br>
+       FINLAND</p>
+    <p><strong>Helsinki office</strong><br>
+       Maria 01 / Lapinlahdenkatu 16<br>
+       00180 Helsinki<br>
+       FINLAND</p>
+  </address>
+  <p class="lead mt-4">
+    Founded in Finland, we are driven by a hacker mindset rooted in transparency, innovation, trust and simplicity in design. We believe in the universal language of straightforward security.
+  </p>
+</section>
+<!-- End New Contact Section -->
