--- a/beacon.html
+++ b/beacon.html
@@ -20,17 +20,44 @@ preload_image: /assets/img/beacon_banner.jpg
     <h1 class="my-4">SensorFu Beacon is designed for customers who depend on absolute network segmentation</h1>
 
     <p>
-        We want our clients to be certain that their security policies and protection measures are, and stay, working as they should. Often, maintaining network security lacks validation, causing anxiety over possible hiccups and misconfigurations, which can lead to revenue losses. 
-        You rely on it. You may call it isolation, segregation, segmentation, partition, or sandboxing. But do you know it works? Privacy, critical infrastructure protection, payment safety, or your sanity may require it. 
-
+        The core security control, especially in OT environments, is network segmentation. It’s essential, 
+        yet often uncertain. You may call it isolation, segregation, partition, sandboxing or air-gapping - 
+        but do you know if it works?
     </p>
     <p>
-        Beacons can be deployed in bare metal, virtual machines, containers, and even on small gadgets. And it is
-        compatible with your deployment solution.
+        We’ve found out that over 80% of the organisations that have deployed Beacons into their live 
+        production networks have found surprises in their network segmentation. Knowing the leaks is the 
+        first step to fixing the leaks.
     </p>
-
     <p>
-        We got you covered.
+        Firewall rules, routing, VPNs, switch VLANs, cabling - it is impossible to know that everything 
+        is working  correctly everywhere, all the time! With SensorFu Beacon, the verification of your 
+        most important security control is straightforward and continuous.
+    </p>
+    <h2>Continuous Validation, Minimal Friction</h2>
+    <p>
+        Beacons are intentionally lightweight. They run silently in the background, 
+        trying to reach their Home, sending an escape test packet once every second. 
+        The escape packets are attempts to communicate through isolation boundaries 
+        using multiple methods over IPv4 and IPv6 networks. If a Beacon reaches Home, 
+        the system alerts instantly, no delays, no overload.
+    </p>
+    <h2>Deploy Where It Matters</h2>
+    <p>
+        From energy substations and oil refineries to food and beverage production 
+        and logistics automation, Beacon adapts to complex environments. Use it 
+        across multiple sites or mission-critical network segments to continuously 
+        verify that your segmentation policies are effective.
+    </p>
+    <p>
+        Rather than finding 300 potential issues in one location, test one important 
+        security control in 300 locations
+    </p>
+    <h2>Quick and easy deployment</h2>
+    <p>
+        Beacons can be deployed as Linux or Windows applications, Docker containers, 
+        virtual machines, or dedicated devices. SensorFu Beacon integrates seamlessly 
+        with most SIEM systems, IDS solutions and NDR providers.
     </p>
 </div>
 
@@ -57,7 +84,8 @@ preload_image: /assets/img/beacon_banner.jpg
             <p>
                 Launch virtual Beacons inside your data centers to see if they can reach 
                 their Home. Download the Beacon Virtual Machine in standard OVA format from 
-                Beacon Home, place the VM in the appropriate network, and you’re ready to go            </p>
+                Beacon Home, place the VM in the appropriate network, and you’re ready to go            
+            </p>
         </div>
         <div class="icon-container">
             <img src="/assets/img/beacon-icons/virtual.svg" alt="Beacon Virtual Icon">
@@ -80,4 +108,17 @@ preload_image: /assets/img/beacon_banner.jpg
             <img src="/assets/img/beacon-icons/device.svg" alt="Beacon Device Icon">
         </div>
     </div>
+</div>
+<div class="container-sm my-sm-4 p-4 text-center">
+    <h2 class="my-4">SensorFu Beacon is designed for customers who depend on absolute 
+        network segmentation</h1>
+    <p>
+        Our methodology centers on making security fundamentals visible, verifiable, 
+        and trusted through continuous validation.
+    </p>
+    <p>
+        We help organizations act before faults become failures, empowering teams to 
+        maintain control integrity without adding complexity, securely, swiftly, and silently.
+    </p>
+
 </div>
