--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@ preload_image: /assets/img/frontpage_banner.jpg
 <div class="hero front-hero">
     <div class="container-xl">
         <div class="hero-content">
-            <h1>Fundamental cyber security for advanced protection</h1>
+            <h1>Cybersecurity starts with the fundamentals</h1>
             <p>
-                Security requirements pile up, while systems and security solutions 
-                get more complex every day. But before implementing more advanced and 
-                complex solutions, be sure you can verify the basic cybersecurity fundamentals 
-                first. Let’s get back to basics. 
+                Security requirements keep adding up, while systems and security solutions 
+                get more complex every day. But before implementing more advanced and complex 
+                solutions, be sure you can verify the basic cybersecurity fundamentals first. 
+                Let’s get back to basics.
             </p>
             <div>
                 <a class="btn btn-gradient" href="about.html#">About us &rarr;</a>
@@ -60,7 +60,7 @@ preload_image: /assets/img/frontpage_banner.jpg
         <div class="hero-content">
             <img src="/assets/img/beacon-by-sensorfu.svg" alt="Beacon By SensorFu">
             <h2>
-                Designed for customers who depend on absolute network segmentation
+                Designed for customers who depend on network segmentation
             </h2>
             <div>
                 <a class="btn btn-gradient" href="/beacon.html">Learn more &rarr;</a>
@@ -107,7 +107,7 @@ preload_image: /assets/img/frontpage_banner.jpg
     <div class="container-xl px-0">
         <div class="video-section">
             <div class="text-container">
-                <h2>Network Monitoring Made&nbsp;Easy</h2>
+                <h2>Real stories on securing OT networks!</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </p>
