Head fix. Shorter and less absolute.

--- a/beacon.html
+++ b/beacon.html
@@ -17,7 +17,7 @@ preload_image: /assets/img/beacon_banner.jpg
 {% include reference-carousel.html %}
 
 <div class="container-sm my-sm-4 p-4 text-center">
-    <h1 class="my-4">SensorFu Beacon is designed for customers who depend on absolute network segmentation</h1>
+    <h1 class="my-4">Designed for customers who depend on network segmentation</h1>
 
     <p>
         The core security control, especially in OT environments, is network segmentation. It’s essential, 
