--- a/beacon.html
+++ b/beacon.html
@@ -20,38 +20,36 @@ preload_image: /assets/img/beacon_banner.jpg
     <h1 class="my-4">Designed for customers who depend on network segmentation</h1>
 
     <p>
-        The core security control, especially in OT environments, is network segmentation. It’s essential, 
-        yet often uncertain. You may call it isolation, segregation, partition, sandboxing or air-gapping - 
-        but do you know if it works?
-    </p>
+        We designed SensorFu Beacon for organization that rely on network segmentation, especially in OT environments. 
+        Beacons will continuously test your isolated networks to verify that segmentation is truly working. 
     <p>
-        We’ve found out that over 80% of the organisations that have deployed Beacons into their live 
-        production networks have found surprises in their network segmentation. Knowing the leaks is the 
-        first step to fixing the leaks.
+        Over 80% of networks that Beacon has been deployed in uncovered vital areas for improvement — leading to stronger, safer systems.
+        With continuous, automated testing, you gain clarity and control over your most critical security controls.
+        Knowing the leaks is the first step to fixing the leaks.
     </p>
     <p>
         Firewall rules, routing, VPNs, switch VLANs, cabling - it is impossible to know that everything 
-        is working  correctly everywhere, all the time! With SensorFu Beacon, the verification of your 
+        is working correctly everywhere, all the time! With SensorFu Beacon, the verification of your 
         most important security control is straightforward and continuous.
     </p>
     <h2>Continuous Validation, Minimal Friction</h2>
     <p>
-        Beacons are intentionally lightweight. They run silently in the background, 
-        trying to reach their Home, sending an escape test packet once every second. 
-        The escape packets are attempts to communicate through isolation boundaries 
-        using multiple methods over IPv4 and IPv6 networks. If a Beacon reaches Home, 
-        the system alerts instantly, no delays, no overload.
+        Beacons are intentionally lightweight, running silently in the background performing two test cycles. 
+        The Fast Loop, that completes in 30 minutes and the Slow Loop that spans 2-8 days. Their sole purpose 
+        is to reach home by sending an escape test packet every second. These packets attempt to communicate
+        across isolation boundaries using various methods over both IPv4 and IPv6 networks. If Beacon reaches home,
+        an alert is sent. 
     </p>
     <h2>Deploy Where It Matters</h2>
     <p>
-        From energy substations and oil refineries to food and beverage production 
-        and logistics automation, Beacon adapts to complex environments. Use it 
-        across multiple sites or mission-critical network segments to continuously 
-        verify that your segmentation policies are effective.
+        Rather than finding 300 potential issues in one location, test one important
+        security control in 300 locations.     
     </p>
     <p>
-        Rather than finding 300 potential issues in one location, test one important 
-        security control in 300 locations
+        From energy substations and oil refineries to food and beverage production
+        and logistics automation, Beacon adapts to complex environments. Use it 
+        across multiple sites or mission-critical network segments to continuously 
+        verify that your segmentation policies are effective. 
     </p>
     <h2>Quick and easy deployment</h2>
     <p>
