content and navigation

--- a/about.html
+++ b/about.html
@@ -1,121 +1,175 @@
 ---
 layout: frontpage
-title: About us!
+title: About us
 description: SensorFu Ltd manufactures and sells advanced automatic security policy checks. SensorFu’s first product, SensorFu Beacon, assures the isolation of computer networks.
-preload_image: /assets/img/frontpage_banner.jpg
+preload_image: /assets/img/sfu-team.jpg
 ---
+
 <div class="hero about-hero">
-    <div class="container-xl">
-        <div class="hero-content">
-            <h1>Going back to the basics of cyber security</h1>
-            <p>
-                We enable organizations to proactively detect even 
-                the most intricate misconfigurations before they compromise 
-                operations. Our technologies let our customers verify that 
-                their foundational security controls work exactly as designed, 
-                24/7.
-
-            </p>
-        </div>
+  <div class="container-xl">
+    <div class="hero-content">
+      <h1>About us</h1>
+      <p class="lead">
+        We enable organizations to proactively detect even the most intricate
+        misconfigurations before they compromise operations.
+      </p>
     </div>
-</div>
-<div class="container-sm my-sm-4 p-4 text-center">
-    <h1 class="my-4">Philosophy</h1>
-
-    <p>
-        SensorFu’s philosophy is rooted in the idea of going back to the basics of cyber security. 
-        Building and maintaining secure business-critical networks can feel overwhelming in an 
-        increasingly complex world. At SensorFu, we understand that challenge. We're here to bring 
-        you simplicity, proactive visibility, and confidence in your network defenses.
-
-    </p>
-    <p>
-        Our product SensorFu Beacon is a solution for proactive and continuous validation of 
-        network isolation and segmentation. It is used in business-critical environments, such as 
-        industrial OT and ICS networks, SCADA systems and other environments which demand reliability of 
-        network segmentation without risking the availability of operations.
-    </p>
-    <a href="/beacon.html" class="btn btn-primary">Read more</a>
+  </div>
 </div>
 
-<div class="container-xl text-center py-4 px-2 px-md-4 ">
-    <div class="row">
-        <div class="col-lg-6 mr-auto order-lg-2 ">
-            <hr class="section-heading-spacer"/>
-            <div class="clearfix"></div>
-            <h2>Founded by</h2>
-            <ul class="list-unstyled lead">
-              <li>
-                Mikko Kenttälä, CEO
-                &nbsp;&nbsp;
-                <a href="https://twitter.com/Turmio_/" aria-label="Mikko Kenttälä on X/Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                <a href="https://linkedin.com/in/mikkokenttala/" aria-label="Mikko Kenttälä on LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
-              </li>
-              <li class="mt-2">
-                Ossi Herrala, R&D lead
-                &nbsp;&nbsp;
-                <a href="https://mastodon.social/@oherrala" rel="me" aria-label="Ossi Herrala on Mastodon"><i class="fab fa-mastodon" aria-hidden="true"></i></a>
-                <a href="https://github.com/oherrala/" aria-label="Ossi Herrala on GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
-                <a href="https://linkedin.com/in/oherrala/" aria-label="Ossi Herrala on LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
-              </li>
-              <li class="mt-2">
-                Sebastian Turpeinen, Productization lead
-                &nbsp;&nbsp;
-                <a href="https://www.linkedin.com/in/sebastianturpeinen/" aria-label="Sebastian Turpeinen on LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
-              </li>
-            </ul>
-            <blockquote class="blockquote bg-gray py-4 px-md-4">
-                <p><i>
-                    "We started SensorFu in order to go back to basics with
-                    IT security. We feel that security requirements pile up,
-                    while systems and security solutions get more complex by
-                    the day. Our products give our customers assurance that
-                    their security policies are and stay sealed."
-                </i>
-                </p>
-                <footer class="blockquote-footer">SensorFu founders</footer>
-            </blockquote>
-        </div>
-        <div class="col-lg-6 mr-auto order-lg-2">
-            <hr class="section-heading-spacer"/>
-            <div class="clearfix"></div>
-            <h2>Funded by </h2>
-            <ul class="list-unstyled">
-              <li><a href="https://nordicoption.fi/">Nordic Option Oy</a></li>
-              <li><a href="https://www.scanabc.com/">Ääkköset Oy</a></li>
-              <li><a href="https://www.businessfinland.fi/en/">Business Finland</a></li>
-            </ul>
+<div class="container-xl my-sm-4 p-4 text-center">
+  <h1 class="my-4">Going back to the basics of cyber security</h1>
 
-            <blockquote class="blockquote bg-gray">
-                <p><i>
-                    "We love how SensorFu's  sharp focus brings a glimpse of
-                    clarity to the security market. They have a solid idea
-                    which scales."<br> &mdash; Kasper Kyllönen, partner @
-                    Ääkköset
-                </i>
-                </p>
-                <footer class="blockquote-footer">Kasper Kyllönen, partner at Ääkköset</footer>
-            </blockquote>
-        </div>
-    </div>
-</div>
-<!-- New Contact Section -->
-<section class="container-xl text-center py-5" aria-labelledby="contact-heading">
-  <hr class="section-heading-spacer">
-  <div class="clearfix"></div>
-  <h2 id="contact-heading">SensorFu Oy</h2>
-  <address class="contact-address">
-    <p><strong>Oulu Headquarters</strong><br>
-       Teknologiantie 11<br>
-       90590 Oulu<br>
-       FINLAND</p>
-    <p><strong>Helsinki office</strong><br>
-       Maria 01 / Lapinlahdenkatu 16<br>
-       00180 Helsinki<br>
-       FINLAND</p>
-  </address>
-  <p class="lead mt-4">
-    Founded in Finland, we are driven by a hacker mindset rooted in transparency, innovation, trust and simplicity in design. We believe in the universal language of straightforward security.
+  <p class="lead">
+    SensorFu’s philosophy is rooted in the idea of going back to the basics of
+    cyber security. Building and maintaining secure business-critical networks
+    can feel overwhelming in an increasingly complex world. At SensorFu, we
+    understand that challenge. We're here to bring you simplicity, proactive
+    visibility, and confidence in your network defenses.
   </p>
-</section>
-<!-- End New Contact Section -->
+  <p class="lead">
+    Our product <a href="beacon.html">SensorFu Beacon</a> is a solution for
+    proactive and continuous validation of network isolation and segmentation.
+    It is used in business-critical environments, such as industrial OT and ICS
+    networks, SCADA systems and other environments which demand reliability of
+    network segmentation without risking the availability of operations.
+  </p>
+  <p class="lead">
+    Founded in Finland, we are driven by a hacker mindset rooted in
+    transparency, innovation, trust and simplicity in design. We believe in the
+    universal language of straightforward security.
+  </p>
+
+  <br />
+
+  <h2 class="my-4">SensorFu Oy</h2>
+
+  <div class="row">
+    <div class="col-lg-5 text-center">
+      <b>Contact Us</b><br />
+      <a href="mailto:contact@sensorfu.com">contact@sensorfu.com</a><br />
+      <a href="tel:+358408019800">+358 40 8019800</a><br />
+      <a href="https://www.youtube.com/@sensorfu"
+        ><i class="fa-brands fa-youtube" aria-hidden="true"></i
+      ></a>
+      <a href="https://twitter.com/sensorfu/"
+        ><i class="fa-brands fa-twitter" aria-hidden="true"></i
+      ></a>
+      <a href="https://www.linkedin.com/company/sensorfu/"
+        ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+      ></a>
+      <a href="https://github.com/sensorfu/"
+        ><i class="fa-brands fa-github" aria-hidden="true"></i
+      ></a>
+      <a href="https://medium.com/sensorfu/"
+        ><i class="fa-brands fa-medium" aria-hidden="true"></i
+      ></a>
+    </div>
+    <div class="col-lg-2 text-center">
+      <b>Oulu Headquarters</b><br />
+      Teknologiantie 11<br />
+      90590 Oulu<br />
+      FINLAND
+    </div>
+    <div class="col-lg-5 text-center">
+      <b>Helsinki office</b><br />
+      Maria 01 / Lapinlahdenkatu 16<br />
+      00180 Helsinki<br />
+      FINLAND
+    </div>
+  </div>
+
+  <br />
+
+  <h2 class="my-4">Founded by</h2>
+
+  <div class="row">
+    <div class="col-lg-5 text-center">
+      <b>Mikko Kenttälä</b><br />
+      CEO<br />
+      <a
+        href="https://twitter.com/Turmio_/"
+        aria-label="Mikko Kenttälä on X/Twitter"
+        ><i class="fa-brands fa-twitter" aria-hidden="true"></i>
+      </a>
+      <a
+        href="https://linkedin.com/in/mikkokenttala/"
+        aria-label="Mikko Kenttälä on LinkedIn"
+        ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+      ></a>
+    </div>
+    <div class="col-lg-2 text-center">
+      <b>Ossi Herrala</b><br />R&D lead<br />
+      <a
+        href="https://mastodon.social/@oherrala"
+        rel="me"
+        aria-label="Ossi Herrala on Mastodon"
+        ><i class="fa-brands fa-mastodon" aria-hidden="true"></i
+      ></a>
+      <a href="https://github.com/oherrala/" aria-label="Ossi Herrala on GitHub"
+        ><i class="fa-brands fa-github" aria-hidden="true"></i
+      ></a>
+      <a
+        href="https://linkedin.com/in/oherrala/"
+        aria-label="Ossi Herrala on LinkedIn"
+        ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+      ></a>
+    </div>
+    <div class="col-lg-5 text-center">
+      <b>Sebastian Turpeinen</b><br />Productization lead<br />
+      <a
+        href="https://www.linkedin.com/in/sebastianturpeinen/"
+        aria-label="Sebastian Turpeinen on LinkedIn"
+        ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+      ></a>
+    </div>
+  </div>
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-..."
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+
+  <blockquote class="blockquote bg-gray p-5 m-5">
+    <p>
+      <i>
+        "We started SensorFu in order to go back to basics with IT security. We
+        feel that security requirements pile up, while systems and security
+        solutions get more complex by the day. Our products give our customers
+        assurance that their security policies are and stay sealed."
+      </i>
+    </p>
+    <footer class="blockquote-footer my-2">SensorFu founders</footer>
+  </blockquote>
+
+  <br />
+
+  <h2 class="my-4">Funded by</h2>
+
+  <div class="row">
+    <div class="col-lg-5 text-center">
+      <a href="https://nordicoption.fi/"><b>Nordic Option Oy</b></a>
+    </div>
+    <div class="col-lg-2 text-center">
+      <a href="https://www.scanabc.com/"><b>Ääkköset Oy</b></a>
+    </div>
+    <div class="col-lg-5 text-center">
+      <a href="https://www.businessfinland.fi/en/"><b>Business Finland</b></a>
+    </div>
+  </div>
+
+  <blockquote class="blockquote bg-gray p-5 m-5">
+    <p>
+      <i>
+        "We love how SensorFu's sharp focus brings a glimpse of clarity to the
+        security market. They have a solid idea which scales."
+      </i>
+    </p>
+    <footer class="blockquote-footer my-2">
+      Kasper Kyllönen, partner at Ääkköset
+    </footer>
+  </blockquote>
+</div>
