--- a/beacon.html
+++ b/beacon.html
@@ -6,116 +6,230 @@ preload_image: /assets/img/beacon_banner.jpg
 ---
 
 <div class="hero beacon-hero">
-    <div class="container-xl">
-        <div class="hero-content">
-            <img src="/assets/img/beacon-by-sensorfu.svg" alt="Beacon By SensorFu">
-            <h2>Always know if your network leaks </h2>
-        </div>
+  <div class="container-xl">
+    <div class="hero-content">
+      <img src="/assets/img/beacon-by-sensorfu.svg" alt="Beacon By SensorFu" />
+      <p class="lead">
+        Designed for customers who depend on<br />
+        network segmentation
+      </p>
     </div>
+  </div>
 </div>
 
-{% include reference-carousel.html %}
-
-<div class="container-sm my-sm-4 p-4 text-center">
-    <h1 class="my-4">Designed for customers who depend on network segmentation</h1>
-
-    <p>
-        We designed SensorFu Beacon for organization that rely on network segmentation, especially in OT environments. 
-        Beacons will continuously test your isolated networks to verify that segmentation is truly working. 
-    <p>
-        Over 80% of networks that Beacon has been deployed in uncovered vital areas for improvement — leading to stronger, safer systems.
-        With continuous, automated testing, you gain clarity and control over your most critical security controls.
-        Knowing the leaks is the first step to fixing the leaks.
-    </p>
-    <p>
-        Firewall rules, routing, VPNs, switch VLANs, cabling - it is impossible to know that everything 
-        is working correctly everywhere, all the time! With SensorFu Beacon, the verification of your 
-        most important security control is straightforward and continuous.
-    </p>
-    <h2>Continuous Validation, Minimal Friction</h2>
-    <p>
-        Beacons are intentionally lightweight, running silently in the background performing two test cycles. 
-        The Fast Loop, that completes in 30 minutes and the Slow Loop that spans 2-8 days. Their sole purpose 
-        is to reach home by sending an escape test packet every second. These packets attempt to communicate
-        across isolation boundaries using various methods over both IPv4 and IPv6 networks. If Beacon reaches home,
-        an alert is sent. 
-    </p>
-    <h2>Deploy Where It Matters</h2>
-    <p>
-        Rather than finding 300 potential issues in one location, test one important
-        security control in 300 locations.     
-    </p>
-    <p>
-        From energy substations and oil refineries to food and beverage production
-        and logistics automation, Beacon adapts to complex environments. Use it 
-        across multiple sites or mission-critical network segments to continuously 
-        verify that your segmentation policies are effective. 
-    </p>
-    <h2>Quick and easy deployment</h2>
-    <p>
-        Beacons can be deployed as Linux or Windows applications, Docker containers, 
-        virtual machines, or dedicated devices. SensorFu Beacon integrates seamlessly 
-        with most SIEM systems, IDS solutions and NDR providers.
-    </p>
+<div class="container-xl my-sm-4 p-5 pb-3">
+  <div class="row justify-content-center">
+    <div class="col-md-10 col-lg-10 text-center">
+      <h1 class="my-4">Always know if your network leaks</h1>
+      <p class="lead">
+        We designed SensorFu Beacon for organization that rely on network
+        segmentation, especially in OT environments. Beacons will continuously
+        test your isolated networks to verify that segmentation is truly
+        working. In over 80% of deployments, Beacon has uncovered critical gaps
+        that led to stronger, safer systems. Knowing the leaks is the first step
+        to fixing them.
+      </p>
+    </div>
+  </div>
 </div>
 
-<div class="container-sm">
-    <div class="beacon-card">
-        <div class="text-container">
-            <h2><span class="black">Beacon</span> Application</h2>
-            <p>
-                The Beacon Application is easy to deploy in existing environments. You 
-                can use management tools such as Microsoft System Center, Group Policy 
-                Objects (GPO), Puppet, Ansible, and others. Simply integrate the Beacon 
-                Application into your automation workflows to gain full visibility into 
-                the effectiveness of your network isolation.           
-            </p>
-        </div>
-        <div class="icon-container">
-            <img src="/assets/img/beacon-icons/app.svg" alt="Beacon Application Icon">
-        </div>
+<div class="container-xl p-4 py-0 my-0">
+  <div class="row">
+    <div class="col-md-4 p-4 text-center" style="border-right: 1px solid #ccc">
+      <img
+        src="/assets/img/industry-icons/continuous-icon.svg"
+        alt=""
+        class="mb-2"
+        style="max-height: 70px; margin-top: 5px; margin-bottom: 5px"
+      />
+      <h3>Continuous Validation,<br />Minimal Friction</h3>
+      <p>
+        Beacons are intentionally lightweight, running silently in the
+        background performing two test cycles. The Fast Loop, that completes in
+        30 minutes and the Slow Loop that spans 2-8 days. Their sole purpose is
+        to reach home by sending an escape test packet every second. These
+        packets attempt to communicate across isolation boundaries using various
+        methods over both IPv4 and IPv6 networks. If Beacon reaches home, an
+        alert is sent.
+      </p>
     </div>
+    <div class="col-md-4 p-4 text-center" style="border-right: 1px solid #ccc">
+      <img
+        src="/assets/img/industry-icons/bullseye-icon.svg"
+        alt=""
+        class="mb-2"
+        style="max-height: 80px"
+      />
+      <h3>Deploy Where<br />It Matters</h3>
+      <p>
+        Rather than finding 300 potential issues in one location, test one
+        important security control in 300 locations. From energy substations and
+        oil refineries to food and beverage production and logistics automation,
+        Beacon adapts to complex environments. Use it across multiple sites or
+        mission-critical network segments to verify that segmentation policies
+        remain effective and that existing controls keep high-value assets and
+        critical systems isolated.
+      </p>
+    </div>
+    <div class="col-md-4 p-4 text-center">
+      <img
+        src="/assets/img/industry-icons/rocket-icon.svg"
+        alt=""
+        class="mb-2"
+        style="max-height: 80px"
+      />
 
-    <div class="beacon-card">
-        <div class="text-container">
-            <h2><span class="black">Beacon</span> Virtual</h2>
-            <p>
-                Launch virtual Beacons inside your data centers to see if they can reach 
-                their Home. Download the Beacon Virtual Machine in standard OVA format from 
-                Beacon Home, place the VM in the appropriate network, and you’re ready to go            
-            </p>
-        </div>
-        <div class="icon-container">
-            <img src="/assets/img/beacon-icons/virtual.svg" alt="Beacon Virtual Icon">
-        </div>
+      <h3>Quick and easy deployment</h3>
+      <p>
+        Beacons can be deployed as Linux or Windows applications, Docker
+        containers, virtual machines, or dedicated devices, letting you reuse
+        your existing infrastructure. SensorFu Beacon integrates seamlessly with
+        most SIEM systems, IDS solutions, and NDR providers. This makes rollout,
+        monitoring, and long-term maintenance straightforward for security
+        operations teams, even in large, distributed or highly regulated
+        environments.
+      </p>
     </div>
-
-    <div class="beacon-card">
-        <div class="text-container">
-            <h2><span class="black">Beacon</span> Device</h2>
-            <p>
-                Use Beacon Devices to test network isolation in on-premises environments. 
-                Leave them behind, move them around—deploy them anywhere. Compatible with 
-                Raspberry Pi*. Simply download the image from Beacon Home, copy it to an SD 
-                card, and you’re ready to deploy the Beacon Device to your network.   
-                
-                <i>*Raspberry Pi is a trademark of the Raspberry Pi Foundation</i>
-            </p>
-        </div>
-        <div class="icon-container">
-            <img src="/assets/img/beacon-icons/device.svg" alt="Beacon Device Icon">
-        </div>
-    </div>
+  </div>
 </div>
-<div class="container-sm my-sm-4 p-4 text-center">
 
-    <p>
-        Our methodology centers on making security fundamentals visible, verifiable, 
-        and trusted through continuous validation.
-    </p>
-    <p>
-        We help organizations act before faults become failures, empowering teams to 
-        maintain control integrity without adding complexity, securely, swiftly, and silently.
+<div class="container-xl my-sm-4 p-5">
+  <div class="row justify-content-center">
+    <div class="col-md-10 col-lg-10 text-center">
+      <p>
+        <img src="/assets/img/beacon-infographic.svg" alt="" class="mb-2" />
+      </p>
+      <p class="lead">
+        Firewall rules, routing, VPNs, switch VLANs, cabling - do you know
+        everything is working correctly everywhere, all the time? With SensorFu
+        Beacon, the verification of your most important security control is
+        straightforward and continuous.
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="container-xl px-5 py-0 my-5">
+  <div class="row my-5">
+    <div class="p-5 col-md-8 bg-light">
+      <h2>Beacon Application</h2>
+      <p>
+        Install the Beacon Application on Linux or Windows workstations,
+        laptops, edge computing devices, or cloud deployments you need to keep
+        safe. Runs on Linux, Docker and Windows.
+      </p>
+    </div>
+    <div
+      class="p-0 col-md-4 bg-primary d-flex align-items-center justify-content-center"
+    >
+      <img
+        src="/assets/img/beacon-icons/beacon-app.svg"
+        alt="Beacon Application Icon"
+        style="max-width: 120px"
+      />
+    </div>
+  </div>
+
+  <div class="row my-5">
+    <div class="p-5 col-md-8 bg-light">
+      <h2>Beacon Virtual</h2>
+      <p>
+        Launch the Virtual Machine Beacons inside VLANs and data centers and see
+        if they can call their Home. Available as an OVA package and ISO image,
+        runs on VMware, VirtualBox, Hyper-V and other platforms.
+      </p>
+    </div>
+    <div
+      class="p-0 col-md-4 bg-primary d-flex align-items-center justify-content-center"
+    >
+      <img
+        src="/assets/img/beacon-icons/beacon-virtual.svg"
+        alt="Beacon Virtual Icon"
+        style="max-width: 120px"
+      />
+    </div>
+  </div>
+
+  <div class="row my-5">
+    <div class="p-5 col-md-8 bg-light">
+      <h2>Beacon Device</h2>
+      <p>
+        Use the Beacon Devices to test network isolation without the need for an
+        existing platform. Simply power them on, connect them to your network
+        and leave them in place. Works on Raspberry Pi*.
+      </p>
+      <p>
+        <i>*) Raspberry Pi is a trademark of the Raspberry Pi Foundation</i>
+      </p>
+    </div>
+    <div
+      class="p-0 col-md-4 bg-primary d-flex align-items-center justify-content-center"
+    >
+      <img
+        src="/assets/img/beacon-icons/beacon-device.svg"
+        alt="Beacon Device Icon"
+        style="max-width: 120px"
+      />
+    </div>
+  </div>
+</div>
+
+<div class="container-xl p-5 my-5">
+  <div class="row bg-dark text-light p-5">
+    <h2>Breaking Out of Isolation - The Great Escape</h2>
+
+    <p class="mb-4">
+      Years of research into network protocols and escape techniques, turned
+      into a practical, automated test. This is how it works:
     </p>
 
+    <dl class="row mb-4">
+      <dt class="col-sm-2 fw-semibold">The Basics:</dt>
+      <dd class="col-sm-10">TCP and UDP over IPv4 and IPv6 → All ports.</dd>
+
+      <dt class="col-sm-2 fw-semibold">DNS Tunneling:</dt>
+      <dd class="col-sm-10">
+        Use name server infrastructure to covertly sneak out.
+      </dd>
+
+      <dt class="col-sm-2 fw-semibold">Broadcasting:</dt>
+      <dd class="col-sm-10">
+        Trigger improper routing decision in multihomed devices.
+      </dd>
+
+      <dt class="col-sm-2 fw-semibold">Spoofing:</dt>
+      <dd class="col-sm-10">
+        Bypass firewalls and routers with spoofed IP packets.
+      </dd>
+
+      <dt class="col-sm-2 fw-semibold">ICMP:</dt>
+      <dd class="col-sm-10">
+        We didn’t forget this one, how about your firewall config?
+      </dd>
+
+      <dt class="col-sm-2 fw-semibold">IP payload:</dt>
+      <dd class="col-sm-10">
+        Find leaks related to easily forgotten protocols like IGMP and L2TP.
+      </dd>
+
+      <dt class="col-sm-2 fw-semibold">TLS test:</dt>
+      <dd class="col-sm-10">
+        A content-aware firewall may pass TLS connections through the controls.
+      </dd>
+    </dl>
+
+    <p class="mb-0">
+      All this with almost <span class="fw-bold">zero configuration</span>. And
+      more to come in the future!
+    </p>
+  </div>
+</div>
+
+<div class="container-xl my-0 mb-5 text-center">
+  <h2>Looking for the Beacon documentation?</h2>
+  <p class="my-4">
+    <a href="https://portal.sensorfu.com/manual/" class="btn btn-gradient"
+      >Beacon User Manual &rarr;</a
+    >
+  </p>
 </div>
